2010-08-02  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSTextView.m (-validateUserInterfaceItem:,
	-performFindPanelAction:): Implement find panel support.

	* Source/GNUmakefile:
	* Source/GSTextFinder.h:
	* Source/GSTextFinder.m:
	* Panels/GNUmakefile:
	* Panels/English.lproj/GSFindPanel.gorm:
	New text finder and associated find panel.

	* Source/NSTextView.m(currentVersion, -initWithTextView:,
	-encodeWithCoder:, -initWithCoder:): Archive the uses find panel
	attribute. This required updating the NSTextView version to 3.

2010-08-02 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSButton.m,
	* Source/NSMenu.m: Add missing #import.

2010-07-27  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSMenuView.m (-setWindowFrameForAttachingToRect:...):
	Better placement of pull down menus. If there is not enough room
	at the preferred edge display the menu at the opposite edge.

2010-07-26  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSMenuView.m (-trackWithEvent:):
	* Source/NSMenu.m (-shiftOnScreen): Correctly handle the cases
	where a menu is partially off screen on the top and the left side
	of the screen, respectively. This fixes bug #30439.

2010-07-26 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSInputManager.m: Use NSDeleteCharacter for the backspace key.

2010-07-26 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSWindow.m (-keyDown:): Correction of last change.

2010-07-25 Eric Wasylishen <ewasylishen@gmail.com>

	* Source/NSSplitView.m (-adjustSubviews):
	Call setFrame: on subviews rather than setFrameSize: followed
	by setFrameOrigin:, so that the subviews never have an inconsistent
	frame (old origin + new size).

	This was messing up cases with NSOpenGLView's inside split views,
	(e.g. usr-apps/examples/gui/MyGL)	because the NSOpenGLView,
	when notified of its size changing, was using the invalid origin.

2010-07-25 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSBrowser.m,
	* Source/NSInputManager.m,
	* Source/NSMatrix.m,