@@ -1,3 +1,10 @@
+2010-08-03 17:21-EDT Gregory John Casamento <greg.casamento@gmail.com>
+
+	* Source/GSTheme.m: remove forward declaration for _setArchiveByName
+	from NSImage category.
+	* Source/NSImage.m: Added code in _setImage:forName: to archive
+	by name instead.
+
 2010-08-02  Wolfgang Lux  <wolfgang.lux@gmail.com>
 
 	* Source/NSTextView.m (-validateUserInterfaceItem:,
